--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -80,8 +80,12 @@
             </DockPanel>
             <DockPanel>
                 <TextBlock Text="Phone" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
-                <TextBox Name="MobileBox" FontSize="16" Margin="0,5,15,5" Width="140" KeyDown="Box_KeyDown"/>
-                <TextBlock Text="Parent" FontSize="16" Margin="0,0,0,0" Width="80" VerticalAlignment="Center"/>
+                <TextBox Name="PhoneBox" FontSize="16" Margin="0,5,15,5" Width="140" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Mobile" FontSize="16" Margin="0,0,0,0" Width="80" VerticalAlignment="Center"/>
+                <TextBox Name="MobileBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Parent" FontSize="16" Margin="15,0,0,0" Width="80" VerticalAlignment="Center"/>
                 <TextBox Name="ParentBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
