--- a/ChronoKeep/UI/Timing/SetTimeWindow.xaml
+++ b/ChronoKeep/UI/Timing/SetTimeWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Set Time" Height="300" Width="300" ResizeMode="NoResize"
+        Title="Set Time" Width="400" ResizeMode="NoResize"
         d:DataContext="{d:DesignInstance local:SetTimeWindow, IsDesignTimeCreatable=True}"
         ExtendsContentIntoTitleBar="True"
         WindowBackdropType="Mica"
@@ -23,21 +23,21 @@
         <ui:TitleBar
             Grid.Row="0">
         </ui:TitleBar>
-        <StackPanel VerticalAlignment="Center" Grid.Row="1">
+        <StackPanel VerticalAlignment="Top" Grid.Row="1" HorizontalAlignment="Center" Margin="10,10,10,10">
             <TextBlock Text="Set Time To" FontSize="18" VerticalAlignment="Center" TextAlignment="Center"/>
-            <RadioButton Name="NowTimeRadioButton" Margin="30,5,30,5" VerticalContentAlignment="Center" GroupName="TimeGroup" Content="Now" FontSize="14" IsChecked="True"/>
-            <RadioButton Name="SpecificTimeRadioButton" Margin="30,5,30,5" VerticalContentAlignment="Center" GroupName="TimeGroup" HorizontalAlignment="Stretch">
+            <RadioButton Name="NowTimeRadioButton" Margin="10,5,10,5" VerticalContentAlignment="Center" GroupName="TimeGroup" Content="Now" FontSize="14" IsChecked="True"/>
+            <RadioButton Name="SpecificTimeRadioButton" Margin="10,5,10,5" VerticalContentAlignment="Center" GroupName="TimeGroup" HorizontalAlignment="Stretch">
                 <Grid HorizontalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="125"/>
-                        <ColumnDefinition Width="85"/>
+                        <ColumnDefinition Width="200"/>
+                        <ColumnDefinition Width="120"/>
                     </Grid.ColumnDefinitions>
-                    <DatePicker Name="SpecificDateBox" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="0"/>
+                    <DatePicker Name="SpecificDateBox" VerticalAlignment="Center" FontSize="14" Grid.Column="0"/>
                     <xctk:MaskedTextBox Name="SpecificTimeBox" FontSize="14" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" Grid.Column="1" Margin="10,0,0,0"/>
                 </Grid>
             </RadioButton>
-            <CheckBox Name="SetAllCheckBox" Content="Set all connected readers" FontSize="14" VerticalContentAlignment="Center" Margin="30,5,30,5"/>
-            <TextBlock Name="TimeLabel" VerticalAlignment="Center" TextAlignment="Center" Text="" FontSize="14" Margin="30,5,30,5"/>
+            <CheckBox Name="SetAllCheckBox" Content="Set all connected readers" FontSize="14" VerticalContentAlignment="Center" Margin="10,5,10,5"/>
+            <TextBlock Name="TimeLabel" VerticalAlignment="Center" TextAlignment="Center" Text="" FontSize="14" Margin="10,5,10,5"/>
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
