--- a/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
+++ b/ChronoKeep/UI/Timing/DivisionStatsPage.xaml
@@ -47,14 +47,16 @@
                                         <ColumnDefinition Width="100" />
                                         <ColumnDefinition Width="60" />
                                         <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="140" />
                                         <ColumnDefinition Width="200" />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
                                     <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
-                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Mobile}" />
-                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Email}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Phone}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding Email}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -81,14 +83,16 @@
                                         <ColumnDefinition Width="100" />
                                         <ColumnDefinition Width="60" />
                                         <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="140" />
                                         <ColumnDefinition Width="200" />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
                                     <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
-                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Mobile}" />
-                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Email}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Phone}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding Email}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -115,14 +119,52 @@
                                         <ColumnDefinition Width="100" />
                                         <ColumnDefinition Width="60" />
                                         <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="140" />
                                         <ColumnDefinition Width="200" />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
                                     <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
-                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Mobile}" />
-                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Email}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Phone}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding Email}" />
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Expander>
+                <Expander x:Name="unknownPanel" Header="Unknown" Margin="0,0,0,5" IsExpanded="False" FontSize="12" HorizontalAlignment="Stretch">
+                    <ListView 
+                        x:Name="unknownListView" 
+                        VerticalAlignment="Stretch"
+                        HorizontalAlignment="Stretch"
+                        VerticalContentAlignment="Top"
+                        SelectionMode="Single"
+                        FontSize="12"
+                        PreviewMouseWheel="activeListView_PreviewMouseWheel"
+                        AlternationCount="2"
+                        ItemContainerStyle="{StaticResource alternatingStyle}"
+                        >
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="100" />
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="200" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
+                                    <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
+                                    <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
+                                    <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Phone}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding Email}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
@@ -149,14 +191,16 @@
                                         <ColumnDefinition Width="100" />
                                         <ColumnDefinition Width="60" />
                                         <ColumnDefinition Width="140" />
+                                        <ColumnDefinition Width="140" />
                                         <ColumnDefinition Width="200" />
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Bib}" />
                                     <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding FirstName}" />
                                     <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding LastName}" />
                                     <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Gender}" />
-                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Mobile}" />
-                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Email}" />
+                                    <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Phone}" />
+                                    <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding Mobile}" />
+                                    <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding Email}" />
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
