--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -26,7 +26,14 @@
                     <xctk:MaskedTextBox Name="StartTime" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" Width="125" Height="30" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold" FontSize="16" KeyDown="StartTimeKeyDown" LostFocus="StartTimeLostFocus"/>
                 </StackPanel>
                 <Button Name="StartRace" Content="Start Race" Width="250" Height="35" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="0,5,0,0" Click="StartRaceClick" />
-                <Button Name="WaveButton" Content="Set Wave Times" Width="250" Height="35" HorizontalAlignment="Center" Margin="0,5,0,0" Click="ChangeWaves"/>
+                <Grid Width="250">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button Name="WaveButton" Content="Set Wave Times" Height="35" HorizontalAlignment="Stretch" Margin="0,5,1,0" Click="ChangeWaves" Grid.Column="0"/>
+                    <Button Name="AlarmButton" Content="Alarms" Height="35" HorizontalAlignment="Stretch" Margin="1,5,0,0" Click="AlarmButton_Click" Grid.Column="1"/>
+                </Grid>
                 <Grid Width="250">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
