--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -7,7 +7,7 @@
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
       xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="700" d:DesignWidth="800"
       Title="SettingsPage">
 
     <StackPanel>
@@ -90,6 +90,17 @@
                 <DockPanel>
                     <TextBlock Text="Announcer Window" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
                     <ComboBox Name="AnnouncerWindowBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                </DockPanel>
+                <DockPanel>
+                    <TextBlock Text="Alarm Sound" FontSize="14" Margin="10" Width="170" VerticalAlignment="Center" />
+                    <Button Content="Play" Height="35" Width="50" Name="PlayBtn" Click="PlayBtn_Click"  FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center"/>
+                    <ComboBox Name="AlarmSoundBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center">
+                        <ComboBoxItem Content="Sound 1" Uid="1" IsSelected="True"/>
+                        <ComboBoxItem Content="Sound 2" Uid="2"/>
+                        <ComboBoxItem Content="Sound 3" Uid="3"/>
+                        <ComboBoxItem Content="Sound 4" Uid="4"/>
+                        <ComboBoxItem Content="Sound 5" Uid="5"/>
+                    </ComboBox>
                 </DockPanel>
             </StackPanel>
             <StackPanel Grid.Column="1">
