--- a/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
+++ b/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
@@ -29,7 +29,7 @@
         <StackPanel VerticalAlignment="Center" Grid.Row="1">
             <DockPanel>
                 <TextBlock Text="Bib" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="BibBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Enter_KeyDown" PreviewTextInput="NumberValidation" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+                <TextBox Name="BibBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Enter_KeyDown" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
             </DockPanel>
             <DockPanel>
                 <TextBlock Text="Time" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
